# ow_autonomy

./: .gitignore  CMakeLists.txt  README  README.md  package.xml  plugin.xml  setup.py
.github/: pull_request_template.md
action/: GuardedMove.action  MoveGuarded.action
cmake/: ow_autonomy-extras.cmake.develspace.in  ow_autonomy-extras.cmake.installspace.in
devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
env-hooks/: 60.ow_autonomy.sh
launch/: autonomy.launch  autonomy_node.launch  autonomy_test.launch
ow_plexil/: CMakeLists.txt  README.md  notes.text  package.xml  plugin.xml  setup.py
ow_plexil/action/: IdentifyLocation.action  Planner.action
ow_plexil/cmake/Modules/: FindPLEXIL.cmake  GetLibraryList.cmake  plexil_functions.cmake
ow_plexil/config/: fault_dependencies.yaml  ow_plexil.yaml
ow_plexil/env-hooks/: 60.ow_plexil.sh
ow_plexil/launch/: ow_exec.launch  owlat_exec.launch  plexil_node.launch
ow_plexil/msg/: PlanSelectionCommand.msg  PlanStatus.msg
ow_plexil/rqt_planner/src/rqt_plexil_planner/: rqt_plexil_planner.py
ow_plexil/rqt_plexil_plan_selection/resource/: plexil_plan_selection.ui
ow_plexil/rqt_plexil_plan_selection/scripts/: rqt_plexil_plan_selection.py
ow_plexil/rqt_plexil_plan_selection/src/rqt_plexil_plan_selection/: rqt_plexil_plan_selection.py
ow_plexil/scripts/: :w  README.md  identify_sample_location.py  ow-compile-plan  plexilcow  test.py  test2.py
ow_plexil/src/plans/: ;  ActionGoalStateDemo.plp  ActivateComms.plp  ArmFindSurface.plp  ArmMoveCartesian.plp  ArmMoveCartesianGuarded.plp  ArmMoveCartesianGuarded_Q.plp  ArmMoveCartesian_Q.plp  ArmMoveJoint.plp  ArmMoveJoints.plp  ArmMoveJointsGuarded.plp  ArmOKTest.plp  ArmStop.plp  ArmStow.plp  ArmUnstow.plp  BasicFaultHandling.plp  BasicFaultHandling2.plp  BasicFaultHandling3.plp  BasicFaultHandling4.plp  BasicFaultHandlingImage.plp  BasicFaultHandlingSearch.plp  BasicFaultHandlingUnstow.plp  CMakeLists.txt  CameraCapture.plp  CameraSetExposure.plp  CheckForFaults.plp  ClearGoalErrorAttempt.plp  ClearGoalErrorOutcome.plp  ClearGoalErrors.plp  CollectAndTransfer.plp  CollectSample.plp  CompatiblePanorama.plp  ComprehensiveArmMoveJointTestOne.plp  Continuous.plp  ContinuousImaging.plp  DebugPanTilt.plp  Deliver.plp  Demo.plp  DigCircular.plp  DigLinear.plp  (+131 more)
ow_plexil/src/plans/common/: ArmFindSurface.plp  ArmMoveCartesian.plp  ArmMoveCartesianGuarded.plp  ArmMoveCartesianGuarded_Q.plp  ArmMoveCartesian_Q.plp  ArmMoveJoint.plp  ArmStop.plp  ArmStow.plp  CameraCapture.plp  FaultClear.plp  FaultClearDemo.plp  PanTiltMoveJoints.plp  README.md  SafeStow.plp  StowSequence.plp  TaskDeliverSample.plp  TaskDiscardSample.plp  TestCommonFaults.plp  TestTelemetry.plp  common-commands.h  common-interface.h
ow_plexil/src/plans/owlat/: ArmSetup.plp  OwlatArmMoveJointsGuarded.plp  OwlatFaultClear.plp  OwlatFaultClearDemo.plp  OwlatTaskScoopLinear.plp  PrintNodeStart.plp  README.md  TaskShearBevameter.plp  TestArmTool.plp  TestArmTools.plp  TestOwlatActions.plp  TestOwlatArmFindSurface.plp  TestOwlatArmMoveCartesian.plp  TestOwlatArmMoveJoints.plp  TestOwlatFaults.plp  TestOwlatMiscActions.plp  TestOwlatTaskScoopCircular.plp  TestOwlatTaskScoopLinear.plp  TestPanTiltMoveJoints.plp  TestShearBevameter.plp  TestTaskDiscardSample.plp  TestTaskPSP.plp  TestTaskPenetrometer.plp  owlat-interface.h
ow_plexil/src/plans/owlat_plans/: ArmMoveJoints.plp  ArmMoveJointsGuarded.plp  ArmSetTool.plp  ArmSetup.plp  ArmTareFTSensor.plp  OwlatArmMoveCartesian.plp  OwlatArmMoveCartesianGuarded.plp  OwlatArmMoveCartesianTest.plp  OwlatArmMoveJoint.plp  OwlatArmMoveJoints.plp  OwlatArmMoveJointsGuarded.plp  OwlatArmPlaceTool.plp  OwlatArmSetTool.plp  OwlatArmStop.plp  OwlatArmTareFS.plp  OwlatLookupTest.plp  OwlatPositionArm.plp  OwlatPrepArm.plp  OwlatStow.plp  OwlatTaskDropoff.plp  OwlatTaskPSP.plp  OwlatTaskScoop.plp  OwlatTaskScoopCircular.plp  OwlatTaskShearBevameter.plp  OwlatTestSequence1.plp  OwlatTestSequence2.plp  OwlatTestSequence3.plp  OwlatTestSequence4.plp  OwlatTestSequence5.plp  OwlatTestSequence6.plp  OwlatUnstow.plp  PrintNodeFinish.plp  README.md  StowSequence.plp  TaskPSP.plp  TaskPenetrometer.plp  TestOwlatActions.plp  TestOwlatArmFindSurface.plp  TestOwlatArmMoveCartesian.plp  TestOwlatArmMoveJoints.plp  (+12 more)
ow_plexil/src/plans/unified/: README.md  TestTelemetry.plp  unified-interface.h
ow_plexil/src/plexil-adapter/: .FaultHierarchy.h.swp  .OwlatAdapter.cpp.swp  .OwlatInterface.cpp.swp  .xmltest.xml.swp  .xmltest2.xml.swp  CMakeLists.txt  CommonAdapter.cpp  CommonAdapter.h  FaultDependencies.cpp  FaultDependencies.h  FaultHierarchy.cpp  FaultHierarchy.h  LanderAdapter.cpp  LanderAdapter.h  LanderInterface.cpp  LanderInterface.h  LanderInterface.tpp  OWLATSimInterface.cpp  OWLATSimInterface.h  OwAdapter.cpp  OwAdapter.h  OwExecutive.cpp  OwExecutive.h  OwInterface.cpp  OwInterface.h  OwlatAdapter.cpp  OwlatAdapter.h  OwlatInterface.cpp  OwlatInterface.h  PlexilAdapter.cpp  PlexilAdapter.h  PlexilInterface.cpp  PlexilInterface.h  PlexilPlanSelection.cpp  PlexilPlanSelection.h  PlexilPlanner.cpp  PlexilPlanner.h  README.md  TerminalPlanSelection.cpp  TerminalPlanSelection.h  (+19 more)
ow_plexil/srv/: IdentifyLocation.srv  PlanSelection.srv
plans/: .gitignore  Debug.cfg  Downlink.plp  Image.plp  Makefile  OceanWorldDefs.h  OceanWorldMission.plp  README  (+4 more)
src/plexil-adapter/: AntennaManager.cpp  AntennaManager.h  CMakeLists.txt  GroundControl.cpp  GuardedMoveClient.cpp  GuardedMoveServer.cpp  JointInfo.h  Makefile  Makefile.gnu  MoveGuardedClient.cpp  MoveGuardedServer.cpp  OwAdapter.cc  OwAdapter.cpp  OwAdapter.h  OwAdapter.hh  OwAdapterROS.cc  OwExecutive.cpp  OwExecutive.h  OwHardware.cpp  OwHardware.h  OwInterface.cpp  OwInterface.h  OwSimInterface.h  OwSimInterface.hh  OwSimInterfaceNative.cc  OwSimInterfaceNative.cpp  OwSimInterfaceROS.cc  OwSimInterfaceROS.cpp  OwSimProxy.cc  OwSimProxy.cpp  OwSimProxy.h  OwSimProxy.hh  README  README.md  autonomy.cpp  autonomy_node.cc  autonomy_node.cpp  dev-notes.txt  joint_support.h  subscriber.cc  (+4 more)
(+125 files in other folders)
