<?xml version="1.0"?>
<package format="2">
  <name>ow_autonomy</name>
  <version>0.1.0</version>
  <description>Autonomy Baseline of the OceanWORLD Simulator</description>
  <maintainer email="michael.dalal@nasa.gov">Mike Dalal</maintainer>
  <license>NASA Internal - OpenSoucing is TODO</license>
  <author email="michael.dalal@nasa.gov">Mike Dalal</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>ow_lander</depend>
  <depend>ow_faults</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
