<?xml version="1.0"?>
<package format="2">
  <name>ow_plexil</name>
  <version>0.1.0</version>
  <description>PLEXIL-based plan executive</description>
  <maintainer email="michael.dalal@nasa.gov">Mike Dalal</maintainer>
  <license>NASA OPEN SOURCE AGREEMENT VERSION 1.3</license>
  <author email="michael.dalal@nasa.gov">Mike Dalal</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>roslib</depend>
  <depend>ow_lander</depend>
  <depend>ow_faults_detection</depend>
  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>rqt_gui_py</depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
